--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-i am divya
+<!DOCTYPE html>
+<html>
+    <head>
+<title> Tasks</title>
+    </head>
+    <body>
+        <table>
+            <tr>
+                <th>S.NO</th>
+                <th> DATE</th>
+                <th>TASK</th>
+                <th>DESCRIPTION</th>
+                <th>LINK</th>
+            </tr>
+            <tr>
+                <th>1.</th>
+                <th>25-05-2023</th>
+                <th></th>
+            </tr>
+        </table>
+    </body>
+    
+
+</html>
