--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title> Tasks</title>
     </head>
     <body>
-        <table>
+        <table bored = "3">
             <tr>
                 <th>S.NO</th>
                 <th> DATE</th>
