--- a/index.html
+++ b/index.html
@@ -5,18 +5,32 @@
     </head>
     <body>
         <table bored = "8">
+            <thead>
             <tr>
                 <th>S.NO</th>
                 <th> DATE</th>
                 <th>TASK</th>
                 <th>DESCRIPTION</th>
-                <th>LINK</th>
+                <th>WORK DONE</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>1.</td>
+                <td>25-05-2023</td>
+                <td>Introdution Of the class</td>
+                <td>  About github</td>
+                <td> Created new project in repository</td>
             </tr>
             <tr>
-                <th>1.</th>
-                <th>25-05-2023</th>
-                <th></th>
+                <td>2.</td>
+                <td>26-05-2023</td>
+                <td> Mentorpick </td>
+                <td> </td>
+                <td> Case Insensitive Palindrome
+                    Check Anagrams</td>
             </tr>
+            </tbody>
         </table>
     </body>
     
