--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <title> Tasks</title>
     </head>
     <body>
+        <style>
+            table ,th, td{
+                border: 1px solid black;
+            }
+        </style>
         <table bored = "8">
             <thead>
             <tr>
