--- a/index.html
+++ b/index.html
@@ -31,9 +31,30 @@
                 <td>2.</td>
                 <td>26-05-2023</td>
                 <td> Mentorpick </td>
-                <td> </td>
-                <td> Case Insensitive Palindrome
+                <td> Coding</td>
+                <td> Case Insensitive Palindrome<br>
                     Check Anagrams</td>
+            </tr>
+            <tr>
+                <td>3.</td>
+                <td>27-05-2023</td>
+                <td>Mentorpick,leetcode</td>
+                <td>coding </td>
+                <td>Balancing Parantheses<br> leetcode contest</td>
+            </tr>
+            <tr>
+                <td>4.</td>
+                <td>29-05-2023</td>
+                <td>Mentorpick</td>
+                <td>coding</td>
+                <td>Height of BST</td>
+            </tr>
+            <tr>
+                <td>5.</td>
+                <td>31-05-2023</td>
+                <td>Mentorpick,codechef</td>
+                <td>coding</td>
+                <td>Are Trees Identical<br>codechef contest</td>
             </tr>
             </tbody>
         </table>
